# raptoreum-api-cpp

./: .travis.yml  CMakeLists.txt  README.md  prueba.cpp
src/bitcoinapi/: CMakeLists.txt  raptoreumapi.cpp  raptoreumapi.h  types.h
src/raptoreumapi/: exception.h  raptoreumapi.cpp  raptoreumapi.h  types.h
src/test/: CMakeLists.txt  main.cpp
